# switchboard

./: .env.example  .gitignore  AGENTS.md  README.md  conftest.py  main.py  main_test.py  pyproject.toml
.github/workflows/: ci.yml
eval/: README.md  dataset.json  evaluators.py  fixtures.py  mock_calendar.py  run_agent.py  run_eval.py
evals/: README.md  dataset.json  dataset.py  evaluators.py  evaluators_code.py  evaluators_code_test.py  fixtures.py  mock_calendar.py  mock_calendar_test.py  run_agent.py  run_agent_test.py  run_eval.py
scripts/: push_initial_prompt.py
src/agent/: builder.py  builder_test.py  prompt_loader.py  prompt_loader_test.py
src/auth/: bootstrap.py  google_oauth.py  google_oauth_test.py
src/calendar/: client.py  client_test.py  tools.py  tools_test.py
src/core/: config.py  config_test.py  logging.py  logging_test.py
src/telegram/: approval.py  approval_test.py  auth_filter.py  auth_filter_test.py  bot.py  bot_test.py
