[project]
name = "project-name"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.1.10",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]


[tool.ruff]
exclude = []
line-length = 100
target-version = "py312"

[tool.ruff.format]
exclude = []

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# testpaths = ["src"]
