[project]
name = "project-name"
version = "0.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-oauthlib>=1.3.1",
    "langchain>=1.2.15",
    "langchain-core>=1.3.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langsmith>=0.7.38",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "ty>=0.0.33",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "evals"]

[project.scripts]
switchboard-eval = "evals.run_eval:main"


[tool.ruff]
exclude = []
line-length = 100
target-version = "py312"

[tool.ruff.format]
exclude = []

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PT"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["src", "evals"]
